# snitch-checker

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/templates/: report.html
src/: cli.rs  lib.rs  main.rs
src/analyzers/: dependencies.rs  file_ops.rs  mod.rs  secrets.rs  urls.rs
src/core/: findings.rs  mod.rs  repository.rs  scanner.rs
src/git/: mod.rs  repository.rs
src/reporters/: console.rs  html.rs  mod.rs  sarif.rs
src/utils/: files.rs  mod.rs  patterns.rs
tests/: analyzers_test.rs
tests/fixtures/repo-with-bad-urls/: urls.py
tests/fixtures/repo-with-file-ops/: operations.py
tests/fixtures/repo-with-secrets/: config.js  config.py  package.json
tests/fixtures/safe-repo/: config.py
