[package]
name = "snitch-checker"
version = "0.1.0"
edition = "2021"
description = "Repository security benchmarking tool"
authors = ["Snitch-Checker Contributors"]
license = "MIT"
repository = "https://github.com/user/snitch-checker"
readme = "README.md"
keywords = ["security", "scanner", "repository", "cli", "audit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Git operations
git2 = "0.19"

# Analysis
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }

# Reporting
tera = "1.20"
chrono = { version = "0.4", features = ["serde"] }

# HTTP (for remote repo checking and vulnerability lookups)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.38", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
glob = "0.3"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "snitch"
path = "src/main.rs"
